fix: Fixed overflow error in mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,10 @@ body {
   overflow-x: hidden;
 }
 
+.container {
+  overflow-x: hidden;
+}
+
 html {
   scroll-behavior: smooth;
 }
